完成登录、账号设置、显示检查登录状态

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.servlet.context-path=/community
 
 #ThymeleafProperties
 spring.thymeleaf.cache=false
+
+community.path.upload=d:/work/data/upload
