--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 #配置连接池
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
     username: root
     password: abc123
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -23,6 +23,22 @@ spring:
         smtp:
           ssl:
             enable: true
+  data:
+    #ElasticsearchProperties
+    elasticsearch:
+      cluster-name: nowcoder
+      cluster-nodes: 127.0.0.1:9300
+  #KafkaProperties
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: test-consumer-group
+      enable-auto-commit: true
+      auto-commit-interval: 3000 #超过3秒自动提交
+  redis:
+    host: 8.130.109.134
+    port: 6379
+    database: 11
 
 #配置mybatis
 mybatis:
@@ -39,3 +55,4 @@ community:
 logging:
   level:
     com.xiaoxin.community.dao: debug
+
